Major changes between version 0.99.4 and 0.99.6.
------------------------------------------------
  - Fix check for first packet between firewall.c and filter.c
  - Only compile TCP_CORK code if TCP_CORK is defined.


Major changes between version 0.99.4 and 0.99.5.
------------------------------------------------
  - Use TCP_CORK on monitor output (if available) to make sure we
    keep the number of packets to a minimum.
  - Fixed a %d which should have been a %s in a debug message.
  - Handle a down request received between starting the protocol
    and the interface becoming available for traffic.
  - If we are running in "sticky" mode we should replace the
    original addresses with those allocated *after* we have taken
    the stopped the proxy.
  - Added save of netmask in "sticky" mode as well as local, remote
    and broadcast addresses.


Major changes between version 0.99.3 and 0.99.4.
------------------------------------------------
  - Fix to the TCP close detection from Fedor.
  - Flush the timeout queue when a connect is explicitly cancelled
    but do not flush it when the link goes up.
  - In retry we want to go DOWN if the link is two-way (because
    the other end might have deliberately hung up and can dial
    back if it needs to) otherwise to RETRY (because we decide
    when the link is idle).
  - Use "ip route replace ..." instead of "ip route add ..."
  - Changed pointers to web site and mailing list archive in
    the README.


Major changes between version 0.99.2 and 0.99.3.
------------------------------------------------
  - Section gone AWOL. Sorry.


Major changes between version 0.99.1 and 0.99.2.
------------------------------------------------
  - Routes on the proxy and actual link are given different metrics
    again. I _think_ that you can only have multiple routes with the
    same metric if the kernel is compiled with the equal cost multipath
    option (which is under the advanced router config section).